improve user api, service (wip)
